32_kvs/grade.txt
Grading at Sun Jul 26 11:45:51 UTC 2020
Attempting to compile:
kv.c: In function ‘readKVs’:
kv.c:22:14: error: comparison between pointer and integer [-Werror]
       if(line=='\n')
              ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
